--- a/Assets/scss/_coursePg.scss
+++ b/Assets/scss/_coursePg.scss
@@ -106,6 +106,7 @@ body{
 .card-body{
    height: 150px;
    background-color:#fff !important ;
+   // padding: 42px 29px !important;
 }
 .tutor-price{
    height:80px;
