--- a/Assets/scss/_signIn.scss
+++ b/Assets/scss/_signIn.scss
@@ -24,6 +24,8 @@ h1, h2,h3,h4 {
    font-family: Gilroy-Medium !important;
    font-size: 15px !important;
    line-height: 22px !important;
+   padding-top: 14px !important;
+   padding-bottom: 14px !important;
 }
 
 // Extra small devices (portrait phones, less than 576px)
