--- a/Assets/scss/_signUp.scss
+++ b/Assets/scss/_signUp.scss
@@ -53,6 +53,8 @@ input[type="email"],input[type="text"],input[type="password"], select.form-contr
    font-family: Gilroy-Medium !important;
    font-size: 15px !important;
    line-height: 22px !important;
+   padding-top: 14px !important;
+   padding-bottom: 14px !important;
 }
 .btn-google,.btn-facebook{
    border: 0.5px solid #1E2B5E !important;
