--- a/Assets/scss/_coursepg2.scss
+++ b/Assets/scss/_coursepg2.scss
@@ -127,51 +127,64 @@ body{
    margin:auto;
 }
 .card-content{
-   height: 250px;
+   height: 280px;
    margin-top: 70px;
+   padding: 42px 29px !important;
    border-radius: 5px;
+   box-shadow: 0px 64px 16px rgba(46, 55, 77, 0.02);
 }
 .top{
    display:flex;
 }
 .card-title2{
-   width:85%;
+   width:80%;
    font-family: Gilroy-Bold;
    font-size: 20px;
    line-height: 24px;
    color: #1E2B5E;
 }
 .top-button{
-   width:15%;
+   width:20%;
 }
 .card-title-day{
-   width:77%;
+   width:74%;
    font-family: Gilroy-Bold;
    font-size: 20px;
    line-height: 24px;
    color: #1E2B5E;
 }
 .top-button-day{
-   width:23%;
+   width:26%;
 }
 .card-title-change{
-   width:73%;
+   width:69%;
    font-family: Gilroy-Bold;
    font-size: 20px;
    line-height: 24px;
    color: #1E2B5E;
 }
 .top-button-change{
-   width:27%;
+   width:31%;
 }
-.btn-danger, .btn-warning, .btn-success{
+.btn-day1, .btn-day2, .btn-day3{
    border-radius:20px !important ;
    font-family: Gilroy-Bold;
    font-size: 12px;
    line-height: 17px;
-   color: rgba(255, 255, 255, 0.7) !important;
-
+   padding:7px 20px !important;
 }
+.btn-day1{
+  background-color: #FFE9E2 !important;
+  color: #EE5628 !important;
+}
+.btn-day2{
+   background-color: #FBF8EB !important;
+   color: #E9C11E !important;
+ }
+ .btn-day3{
+   background-color: #F3FFE8 !important;
+   color: #6BB81F !important;
+ }
 .about-card2{
    width:75%;
    font-family: Gilroy-Regular;
